--- a/sources/style.css
+++ b/sources/style.css
@@ -1,4 +1,5 @@
 body {
+    background-color: var(--second-background-color);
 
 }
 
@@ -17,7 +18,7 @@ body {
     letter-spacing: 1px;
 }
 
-h1 {
+.hero-h1 {
     padding: 5px;
     color: white;
     font-family: var(--heading-font-family);    
@@ -34,7 +35,7 @@ hr {
 
 }
 
-h4 {
+.hero-h4 {
     font-size: 14px;
     font-family: var(--standard-text-font);
     color: white;
@@ -51,4 +52,57 @@ border-radius: 20px;
     background-color: var(--main-background-color);
     text-align: center;
     padding: 90px 40px;
+}
+
+.app-headings {
+font-size: 48px;
+padding: 5px;
+font-family: var(--second-heading-font);
+}
+
+.app-content {
+    font-size: 12px;
+    font-family: var(--standard-text-font);
+    padding: 10px;
+    line-height: 1.75;
+
+}
+
+.app-button {
+background-color: var(--main-background-color);
+color: white;
+border: none;
+border-radius: 3px;
+padding: 15px;
+font-family: var(--standard-text-font);
+box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.1);
+}
+
+.teacher-img {
+    border-radius: 2px;
+    margin: 60px 0px;
+    width: 500px;
+}
+
+.user-description {
+    padding: 70px 60px;
+}
+
+@media (max-width: 960px) {
+    .user-description {
+        text-align: center;
+        padding: 30px;
+    }
+
+    .hero-h1 {
+        font-size: 44px;
+    }
+
+    .hero {
+        padding: 70px 20px;
+    }
+
+    .main-classroom-img {
+        max-width: 300px;
+    }
 }
