--- a/sources/style.css
+++ b/sources/style.css
@@ -11,6 +11,7 @@ body {
 --second-background-color: rgb(205, 221, 216);
 }
 
+/*Homepage Css*/
 .top-welcome {
     color: white;
     font-family: var(--second-heading-font);
@@ -88,12 +89,62 @@ box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.1);
     padding: 70px 60px;
 }
 
-@media (min-width: 500px) {
+/*About-me page CSS*/
 
-    .user-description {
-        text-align: center;
-        padding: 50px 10px;
-    }
+.hero-about {
+    text-align: center;
+    padding: 90px 40px;
+}
+
+.h3-about {
+    background: var(--main-background-color);
+    opacity: 90%;
+    font-family: var(--second-heading-font);
+    font-weight: 600;
+    font-size: 50px;
+    color: white;
+    text-align: center;
+    padding: 20px 0px;
+    margin-bottom: 70px;
+}
+ .about-sections {
+    text-align: center;
+ }
+
+.about-img {
+    max-width: 100%;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.about-heading {
+    font-weight: 800;
+    font-family: var(--standard-text-font);
+    padding: 5px;
+    font-size: 20px;
+}
+
+.about-description {
+    padding: 5px;
+    font-size: 14px;
+}
+
+button {
+    background-color: var(--main-background-color);
+        color: white;
+        border: none;
+        border-radius: 3px;
+        padding: 15px;
+        font-family: var(--standard-text-font);
+        box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.1);
+        display: block;
+        margin: 60px auto;
+}
+
+
+/*Media Queiries*/
+
+@media (max-width: 768px) {
 
     .app-headings {
         font-size: 80px;
@@ -108,6 +159,11 @@ box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.1);
 
     .app-button {
         font-size: 35px;
+    }
+
+    .user-description {
+        text-align: center;
+        padding: 50px 10px;
     }
 
     .top-welcome {
@@ -126,5 +182,9 @@ box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.1);
         font-size: 30px;
     }
 
-   
+.about-sections {
+    display: flex;
+    
+}
+
 }
