--- a/sources/style.css
+++ b/sources/style.css
@@ -11,6 +11,10 @@ body {
 --second-background-color: rgb(205, 221, 216);
 }
 
+a {
+    text-decoration: none;
+}
+
 /*Navbar*/
 
 .navbar-brand {
@@ -206,6 +210,20 @@ h4 {
         font-family: var(--standard-text-font);
         box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.1);
 }
+
+/*Contact Page*/
+
+.contact-container {
+    text-align: center;
+    margin-top: 60px;
+    font-family: var(--standard-text-font);
+    color: var(--main-background-color);
+}
+
+h3 {
+    font-weight: bold;
+}
+
 /*Media Queiries*/
 
 @media (max-width: 1000px) {
