--- a/sources/style.css
+++ b/sources/style.css
@@ -15,7 +15,7 @@ a {
     text-decoration: none;
 }
 
-/*Navbar*/
+/*Navbar/Header*/
 
 .navbar-brand {
     font-family: var(--heading-font-family);
@@ -37,7 +37,40 @@ a {
     color: rgb(154, 167, 163) !important;
 }
 
+/*Footer*/
+
+footer {
+    margin: 60px 0;
+}
+
+footer .email-link {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    font-family: var(--standard-text-font);
+}
+
+footer .email-link:hover {
+    color: var(--main-background-color);
+}
+
+footer .social-links a {
+color: var(--main-background-color);
+margin: 20px;
+background: white;
+padding: 11px 12px;
+font-size: 20px;
+border-radius: 50%;
+transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+color: var(--second-background-color);
+}
+
 /*Homepage Css*/
+
 .top-welcome {
     color: white;
     font-family: var(--second-heading-font);
@@ -68,6 +101,10 @@ hr {
     color: white;
     padding: 15px;
     text-align: center;
+}
+
+.index-container {
+    padding: 20px;
 }
 
 .main-classroom-img {
