--- a/sources/style.css
+++ b/sources/style.css
@@ -41,6 +41,7 @@ a {
 
 footer {
     margin: 60px 0;
+    text-align: center;
 }
 
 footer .email-link {
@@ -273,6 +274,16 @@ h3 {
 /*Media Queiries*/
 
 @media (max-width: 1000px) {
+
+    /*Footer*/
+
+    footer .email-link {
+        font-size: 40px;
+    }
+
+    footer .social-links a {
+        font-size: 50px;  
+    }
 
     /*Homepage Css*/
     .app-headings {
