--- a/sources/style.css
+++ b/sources/style.css
@@ -108,6 +108,7 @@ hr {
 
 .index-container {
     padding: 20px;
+    text-align: center;
 }
 
 .main-classroom-img {
@@ -271,6 +272,20 @@ h4 {
 
 h3 {
     font-weight: bold;
+    margin: 25px;
+}
+
+.contact-link {
+margin: 80px;
+font-weight: bold;
+}
+
+.contact-link:hover {
+    background: var(--main-background-color);
+    color: white;
+    border-radius: 20px;
+    padding: 10px 15px;
+    transition: all 100ms ease-in-out;
 }
 
 /*Media Queiries*/
